Imrpove test coverage and logging